--- a/env-usaid.yml
+++ b/env-usaid.yml
@@ -51,5 +51,4 @@ dependencies:
   - pip:
     - pyspellchecker==0.5.4
     - googletrans==2.4.0
-    #- allennlp==0.8.3 #can be problems while installing it, may be will require uninstall/install h5py
-    - dvc==2.5.4
+    - allennlp==0.8.3 #may be additionally uninstall/install h5py==2.10.0 and overrides==3.1.0
