--- a/env-usaid-windows.yml
+++ b/env-usaid-windows.yml
@@ -9,11 +9,11 @@ dependencies:
   - elasticsearch=6.3.1
   - gensim=3.5.0
   - hdbscan=0.8.18
-  - ipykernel=5.3.4
+  - ipykernel=4.9.0
   - ipython=6.5.0
   - jupyter=1.0.0
   - jupyter_contrib_nbextensions=0.5.0
-  - jupyter_nbextensions_configurator=0.4.1
+  - jupyter_nbextensions_configurator=0.4.0
   - matplotlib=3.0.0
   - mpld3=0.3
   - networkx=2.2
@@ -22,12 +22,14 @@ dependencies:
   - numpy=1.16.4
   - pandas=0.24.2
   - plotly=3.2.1
+  - python=3.6.6
   - scikit-learn=0.20.3
   - scipy=1.4.1
   - seaborn=0.9.0
   - spacy=2.1.8
   - xlrd=1.1.0
   - xlsxwriter=1.1.1
+  - pyLDAvis=2.1.2
   - textblob=0.15.1
   - beautifulsoup4=4.6.3
   - textdistance=4.2.1
@@ -35,11 +37,16 @@ dependencies:
   - pycountry=18.5.26
   - zeep=2.5.0 
   - langdetect=1.0.7
+  - bibtexparser=1.0.1
   - pyshp=2.1.0
   - pytorch=1.0.0
-  - tensorflow=1.13.1
+  - tensorflow=1.13.2
   - tensorflow-hub=0.6.0
   - psutil=5.6.3
+  - fastparquet=0.2.1
+  - python-snappy=0.5.2
+  - pyarrow=0.16.0
+  - geopandas=0.8.1
   - theano=1.0.5
   - pip:
     - pyspellchecker==0.5.4
